--- a/AdminDashBoard/assets/css/styles.css
+++ b/AdminDashBoard/assets/css/styles.css
@@ -108,22 +108,27 @@ small{
 
 .bg-primary{
     background: var(--color-primary);
-    box-shadow: 0 0.8rem var(--color-primary-light);
+    box-shadow: 0 0.8rem 0.8rem var(--color-primary-light);
 }
 
 .bg-danger{
     background: var(--color-danger);
-    box-shadow: 0 0.8rem var(--color-danger-light);
+    box-shadow: 0 0.8rem 0.8rem var(--color-danger-light);
 }
 
 .bg-success{
     background: var(--color-success);
-    box-shadow: 0 0.8rem var(--color-success-light);
+    box-shadow: 0 0.8rem 0.8rem var(--color-success-light);
 }
 
 .bg-purple{
     background: var(--color-purple);
-    box-shadow: 0 0.8rem var(--color-purple-light);
+    box-shadow: 0 0.8rem 0.8rem var(--color-purple-light);
+}
+
+.bg-dark{
+    background: #27282f;
+    box-shadow: 0 0.8rem 0.8rem rgba(0, 0, 0, 0.2);
 }
 
 /* ============= NAV BAR ============ */
@@ -213,4 +218,68 @@ nav .profile-area .profile-photo{
     height: 3rem;
     border-radius: 50%;
     overflow: hidden;
+}
+
+/* ==================== ASIDE & SIDEBAR ==================== */
+main{
+    display: grid;
+    grid-template-columns: 16rem auto 38rem;
+    gap: 2rem;
+    width: 96%;
+    margin: 1rem auto 4rem;
+}
+
+main aside{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 88vh;
+}
+/* will be shown only on mobile and tablets */
+main aside button#clone-btn{
+    display: none;
+}
+
+main aside .sidebar a{
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    height: 4.2rem;
+    color: var(--color-gray-light);
+    position: relative;
+}
+
+main aside .sidebar a span{
+    font-size: 1.7rem;
+    margin-left: 3rem;
+    transition: all 300ms ease;
+}
+
+main aside .sidebar a.active{
+    background: var(--color-white);
+    color: var(--color-primary);
+}
+
+main aside .sidebar a.active:before{
+    content: "";
+    width: 6px;
+    height: 100%;
+    position: absolute;
+    background: var(--color-primary);
+}
+
+main aside .sidebar a:hover{
+    color: var(--color-primary);
+}
+
+main aside .sidebar a:hover span{
+    margin-left: 2rem;
+}
+
+main aside .sidebar h4{
+    font-weight: 500;
+}
+
+main section{
+    background: black;
 }
